--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,110 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.elementor-shape {
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  line-height: 0;
+  direction: ltr;
+  bottom: -1px;
+  transform: rotate(180deg);
+}
+.elementor-shape svg {
+  display: block;
+  width: calc(100% + 1.3px);
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.elementor-shape .elementor-shape-fill {
+  fill: #f0f;
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
+  -webkit-transform: rotateY(
+          0deg
+  );
+  transform: rotateY(0deg);
+}
+
+
+.demo-hidden {
+  display: none;
+}
+
+.demo-navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  height: 75px;
+  background-color: #222;
+}
+
+.demo-navbar ul {
+  list-style: none;
+  margin: 0 auto;
+  display: block;
+  padding: 0;
+}
+
+.demo-navbar ul li{
+  display: inline;
+}
+
+.demo-navbar ul li a{
+  text-indent: -9999px;
+  font-size: 0;
+  margin: 0 15px;
+}
+
+.demo-navbar ul li a svg {
+  width: 60px;
+  height: 50px;
+  pointer-events: all;
+  color: #999;
+}
+
+.demo-navbar ul li a[data-portsize*="320"] svg{
+  width: 14px;
+}
+
+.demo-navbar ul li a[data-portsize*="768"] svg{
+  width: 20px;
+}
+
+.demo-navbar ul li a[data-portsize*="1024"] svg{
+  width: 28px;
+}
+
+.demo-navbar ul li a[data-portsize*="reset"] svg{
+  width: 41px;
+}
+
+svg .sg-fill {
+  fill: #222;
+  transition: fill 0.3s;
+}
+
+.demo-navbar ul li svg:hover {
+  color: #ccc;
+  transition: color 0.3s;
+}
+
+.demo-navbar ul li .fr-active svg {
+  color: #ccc;
+}
+
+.demo-content {
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+  background-color: #ccc;
+  height: 600px;
+  border: 12px solid #ddd;
+}
