--- a/src/Templates/Banners/standard.hbs
+++ b/src/Templates/Banners/standard.hbs
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="w-full md:w-1/2">
-        <div class="w-full h-auto overflow-hidden rounded-full shadow-xl sm:rounded-xl">
+        <div class="w-full h-auto overflow-hidden shadow-xl rounded-xl">
           <img src="https://cdn.devdojo.com/images/november2020/hero-image.jpeg">
         </div>
       </div>
