--- a/src/Templates/Banners/standard.hbs
+++ b/src/Templates/Banners/standard.hbs
@@ -3,7 +3,7 @@
     <div class="flex flex-wrap items-center">
       <div class="w-full md:w-1/2 md:px-3">
         <div class="w-full pb-6 space-y-6 sm:max-w-md lg:max-w-lg md:space-y-4 lg:space-y-8 xl:space-y-9 sm:pr-5 lg:pr-0 md:pb-0">
-          <h1 class="text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl md:text-4xl lg:text-5xl xl:text-6xl">
+          <h1 class="text-4xl font-extrabold tracking-tight text-gray-900 sm:text-5xl md:text-4xl lg:text-5xl xl:text-5xl">
             <span class="block xl:inline">Beautiful Pages to</span>
             <span class="text-{{>color color=colors.primary opacity="normal"}} block xl:inline">Tell Your Story!</span>
           </h1>
@@ -21,7 +21,7 @@
       </div>
       <div class="w-full md:w-1/2">
         <div class="w-full h-auto overflow-hidden shadow-xl rounded-xl">
-          <img src="https://cdn.devdojo.com/images/november2020/hero-image.jpeg">
+          <img src="https://dummyimage.com/721x400">
         </div>
       </div>
     </div>
