--- a/src/Templates/Footers/standard.hbs
+++ b/src/Templates/Footers/standard.hbs
@@ -2,7 +2,7 @@
   <div class="container flex flex-col items-center py-8 mx-auto max-w-7xl sm:flex-row">
     <a href="#_" class="text-xl font-black leading-none text-gray-900 select-none logo">
       Theen Wind<span class="text-{{>color color=colors.primary opacity="normal"}}">.</span></a>
-    <p class="mt-4 text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l sm:border-gray-200 sm:mt-0">© 2021 Tails - Tailwindcss Page Builder
+    <p class="mt-4 text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l sm:border-gray-200 sm:mt-0">© 2021 Theen - Tailwind Page Builder
     </p>
     <span class="inline-flex justify-center mt-4 space-x-5 sm:ml-auto sm:mt-0 sm:justify-start">
       <a href="#" class="text-gray-400 hover:text-gray-500">
