--- a/src/Templates/Headers/standard-02.hbs
+++ b/src/Templates/Headers/standard-02.hbs
@@ -1,7 +1,7 @@
 <section class="relative w-full px-8 text-gray-700 bg-white body-font">
   <div class="container flex flex-col flex-wrap items-center justify-between py-5 mx-auto md:flex-row max-w-7xl">
     <a href="#_" class="relative z-10 flex items-center w-auto text-xl font-extrabold leading-none text-black select-none">
-      Theen Wind<span class="text-{{>color color=colors.primary opacity="normal"}}">.</span>
+      Theen Wind<span class="text-{{>color value=colors opacity="normal"}}">.</span>
     </a>
 
     <nav class="top-0 left-0 z-0 flex items-center justify-center w-full h-full py-5 -ml-0 space-x-5 text-base md:-ml-5 md:py-0 md:absolute">
@@ -18,7 +18,7 @@
         Sign in
       </a>
       <span class="inline-flex {{>rounded radius=borders.radius}}">
-        <a href="#" class="bg-{{>color color=colors.primary opacity="normal"}} hover:bg-{{>color color=colors.primary opacity="darker"}} inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap {{>rounded radius=borders.radius}}">
+        <a href="#" class="bg-{{>color value=colors opacity="normal"}} hover:bg-{{>color value=colors opacity="darker"}} inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap {{>rounded radius=borders.radius}}">
           Sign up
         </a>
       </span>
