--- a/src/Templates/Pricings/standard.hbs
+++ b/src/Templates/Pricings/standard.hbs
@@ -27,30 +27,30 @@
         </p>
         <ul class="flex-1 p-0 mt-4 ml-5 leading-7 text-gray-900 border-0 border-gray-200">
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             Automated Reporting
           </li>
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             Faster Processing
           </li>
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             Customizations
           </li>
         </ul>
-        <button class="inline-flex justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center text-{{>color color=colors.primary opacity="normal"}} no-underline bg-transparent border border-{{>color color=colors.primary opacity="normal"}} rounded-md cursor-pointer hover:bg-{{>color color=colors.primary opacity="darker"}} hover:border-{{>color color=colors.primary opacity="darker"}} hover:text-white focus-within:bg-{{>color color=colors.primary opacity="darker"}} focus-within:border-{{>color color=colors.primary opacity="darker"}} focus-within:text-white sm:text-base md:text-lg">
+        <button class="inline-flex justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center text-{{>color value=colors opacity="normal"}} no-underline bg-transparent border border-{{>color value=colors opacity="normal"}} rounded-md cursor-pointer hover:bg-{{>color value=colors opacity="darker"}} hover:border-{{>color value=colors opacity="darker"}} hover:text-white focus-within:bg-{{>color value=colors opacity="darker"}} focus-within:border-{{>color value=colors opacity="darker"}} focus-within:text-white sm:text-base md:text-lg">
           Select Plan
         </button>
       </div>
       <!-- Price 2 -->
-      <div class="relative z-20 flex flex-col items-center max-w-md p-4 mx-auto my-0 bg-white border-4 border-{{>color color=colors.primary opacity="normal"}} border-solid rounded-lg sm:p-6 md:px-8 md:py-16">
+      <div class="relative z-20 flex flex-col items-center max-w-md p-4 mx-auto my-0 bg-white border-4 border-{{>color value=colors opacity="normal"}} border-solid rounded-lg sm:p-6 md:px-8 md:py-16">
         <h3 class="m-0 text-2xl font-semibold leading-tight tracking-tight text-black border-0 border-gray-200 sm:text-3xl md:text-4xl">
           Basic
         </h3>
@@ -67,31 +67,31 @@
         </p>
         <ul class="flex-1 p-0 mt-4 leading-7 text-gray-900 border-0 border-gray-200">
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             Everything in Starter
           </li>
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             100 Builds
           </li>
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             Progress Reports
           </li>
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             Premium Support
           </li>
         </ul>
-        <button class="inline-flex justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center text-white no-underline bg-{{>color color=colors.primary opacity="normal"}} border rounded-md cursor-pointer hover:bg-{{>color color=colors.primary opacity="darker"}} hover:border-{{>color color=colors.primary opacity="darker"}} hover:text-white focus-within:bg-{{>color color=colors.primary opacity="darker"}} focus-within:border-{{>color color=colors.primary opacity="darker"}} focus-within:text-white sm:text-base md:text-lg">
+        <button class="inline-flex justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center text-white no-underline bg-{{>color value=colors opacity="normal"}} border rounded-md cursor-pointer hover:bg-{{>color value=colors opacity="darker"}} hover:border-{{>color value=colors opacity="darker"}} hover:text-white focus-within:bg-{{>color value=colors opacity="darker"}} focus-within:border-{{>color value=colors opacity="darker"}} focus-within:text-white sm:text-base md:text-lg">
           Select Plan
         </button>
       </div>
@@ -113,31 +113,31 @@
         </p>
         <ul class="flex-1 p-0 mt-4 leading-7 text-gray-900 border-0 border-gray-200">
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             Everything in Basic
           </li>
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             Unlimited Builds
           </li>
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             Advanced Analytics
           </li>
           <li class="inline-flex items-center block w-full mb-2 ml-5 font-semibold text-left border-solid">
-            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color color=colors.primary opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <svg class="w-5 h-5 mr-2 font-semibold leading-7 text-{{>color value=colors opacity="normal"}} sm:h-5 sm:w-5 md:h-6 md:w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
             </svg>
             Company Evaluations
           </li>
         </ul>
-        <button class="inline-flex justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center text-{{>color color=colors.primary opacity="normal"}} no-underline bg-transparent border border-{{>color color=colors.primary opacity="normal"}} rounded-md cursor-pointer hover:bg-{{>color color=colors.primary opacity="darker"}} hover:border-{{>color color=colors.primary opacity="darker"}} hover:text-white focus-within:bg-{{>color color=colors.primary opacity="darker"}} focus-within:border-{{>color color=colors.primary opacity="darker"}} focus-within:text-white sm:text-base md:text-lg">
+        <button class="inline-flex justify-center w-full px-4 py-3 mt-8 font-sans text-sm leading-none text-center text-{{>color value=colors opacity="normal"}} no-underline bg-transparent border border-{{>color value=colors opacity="normal"}} rounded-md cursor-pointer hover:bg-{{>color value=colors opacity="darker"}} hover:border-{{>color value=colors opacity="darker"}} hover:text-white focus-within:bg-{{>color value=colors opacity="darker"}} focus-within:border-{{>color value=colors opacity="darker"}} focus-within:text-white sm:text-base md:text-lg">
           Select Plan
         </button>
       </div>
