--- a/src/Templates/Headers/standard.hbs
+++ b/src/Templates/Headers/standard.hbs
@@ -1,9 +1,10 @@
+<!-- STANDARD THEME / HEADER -->
 <section class="w-full px-8 text-gray-700 bg-white">
   <div class="container flex flex-col flex-wrap items-center justify-between py-5 mx-auto md:flex-row max-w-7xl">
     <div class="relative flex flex-col md:flex-row">
       <a href="#_" class="flex items-center mb-5 font-medium text-gray-900 lg:w-auto lg:items-center lg:justify-center md:mb-0">
         <span class="mx-auto text-xl font-black leading-none text-gray-900 select-none">
-          Theen Wind<span class="text-{{>color color=colors.primary opacity="normal"}}">.</span>
+          Theen Wind<span class="text-{{>color value=colors opacity="normal"}}">.</span>
         </span>
       </a>
       <nav class="flex flex-wrap items-center mb-5 text-base md:mb-0 md:pl-8 md:ml-8 md:border-l md:border-gray-200">
@@ -19,7 +20,7 @@
       <a href="#" class="text-base font-medium leading-6 text-gray-600 whitespace-no-wrap transition duration-150 ease-in-out hover:text-gray-900">
         Sign in
       </a>
-      <a href="#" class="bg-{{>color color=colors.primary opacity="normal"}} hover:bg-{{>color color=colors.primary opacity="darker"}} {{>rounded radius=borders.radius}} inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap border border-transparent shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-{{colors.primary}}-600">
+      <a href="#" class="bg-{{>color value=colors opacity="normal"}} hover:bg-{{>color value=colors opacity="darker"}} {{>rounded radius=borders.radius}} inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap border border-transparent shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-{{colors.primary}}-600">
         Sign up
       </a>
     </div>
