--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://use.typekit.net/kfz5jhb.css");
+@import url('font.css');
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
