--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -4651,6 +4651,10 @@ video {
   grid-column: span 4 / span 4;
 }
 
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
+
 .transform {
   --tw-translate-x: 0;
   --tw-translate-y: 0;
@@ -4780,38 +4784,6 @@ video {
     -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
             animation-timing-function: cubic-bezier(0,0,0.2,1);
   }
-}
-
-@import url("https://use.typekit.net/kfz5jhb.css");
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.h-full--12 {
-  height: calc(100% - 3rem);
-}
-
-.h-full--m-4 {
-  height: calc(100% - 1rem);
-}
-
-.ReactVirtualized__Grid.ReactVirtualized__List {
-  outline: none!important;
-}
-
-.ReactVirtualized__Grid__innerScrollContainer {
-  overflow: auto!important;
 }
 
 @media (min-width: 640px) {
@@ -4960,6 +4932,10 @@ code {
 
   .md\:border-l {
     border-left-width: 1px;
+  }
+
+  .md\:block {
+    display: block;
   }
 
   .md\:flex-row {
