--- a/src/Templates/StandardTheme/Banners/Standard02/template.hbs
+++ b/src/Templates/StandardTheme/Banners/Standard02/template.hbs
@@ -3,12 +3,17 @@
   <div class="container items-center max-w-7xl px-4 sm:px-6 lg:px-8 mx-auto">
     <div class="flex flex-col sm:flex-row flex-wrap items-center space-y-8 sm:space-y-0 sm:space-x-8">
       <div class="flex-1">
+        <div class="w-full h-auto overflow-hidden shadow-xl rounded-xl">
+          <img src="https://picsum.photos/720/400.webp?grayscale&random=2">
+        </div>
+      </div>
+      <div class="flex-1">
         <div class="w-full sm:max-w-md lg:max-w-lg sm:pr-5 lg:pr-0 md:pb-0">
-          <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+          <h1 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
             <span class="">Beautiful Pages</span>
             <span class="text-{{>color value=colors opacity="normal"}}">Tell Your Story!</span>
           </h1>
-          <p class="mt-4 lg:mx-auto text-base text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It's never been easier to build beautiful websites that convey your message and tell your story.</p>
+          <p class="mt-4 lg:mx-auto text-xl text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It's never been easier to build beautiful websites that convey your message and tell your story.</p>
           <div class="relative flex flex-col sm:flex-row sm:space-x-4 mt-10">
             <a href="#_" class="bg-{{>color value=colors opacity="normal"}} hover:bg-{{>color value=colors opacity="lighter"}} {{>rounded radius=borders.radius}} flex items-center w-full px-6 py-3 mb-3 font-medium text-white sm:mb-0 sm:w-auto">
               Try It Free
@@ -18,11 +23,6 @@
               Learn More
             </a>
           </div>
-        </div>
-      </div>
-      <div class="flex-1">
-        <div class="w-full h-auto overflow-hidden shadow-xl rounded-xl">
-          <img src="https://picsum.photos/720/400.webp?grayscale&random=1">
         </div>
       </div>
     </div>
