--- a/src/Templates/StandardTheme/Headers/Standard02/template.hbs
+++ b/src/Templates/StandardTheme/Headers/Standard02/template.hbs
@@ -1,27 +1,39 @@
-<section class="relative w-full px-8 text-gray-700 bg-white body-font">
-  <div class="container flex flex-col flex-wrap items-center justify-between py-5 mx-auto md:flex-row max-w-7xl">
-    <a href="#_" class="relative z-10 flex items-center w-auto text-xl font-extrabold leading-none text-black select-none">
-      Theen Wind<span class="text-{{>color value=colors opacity="normal"}}">.</span>
-    </a>
-
-    <nav class="top-0 left-0 z-0 flex items-center justify-center w-full h-full py-5 -ml-0 space-x-5 text-base md:-ml-5 md:py-0 md:absolute">
-      {{#each mainMenus}}
-      <a href="{{this.url}}"
-         class="relative font-medium leading-6 text-gray-600 transition duration-150 ease-out hover:text-gray-900" x-data="{ hover: false }" @mouseenter="hover = true" @mouseleave="hover = false">
-        <span class="block">{{this.label}}</span>
-      </a>
-      {{/each}}
-    </nav>
-
-    <div class="relative z-10 inline-flex items-center space-x-3 md:ml-5 lg:justify-end">
-      <a href="#" class="{{>rounded radius=borders.radius}} inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-gray-600 whitespace-no-wrap bg-white border border-gray-200 hover:bg-gray-50">
-        Sign in
-      </a>
-      <span class="inline-flex {{>rounded radius=borders.radius}}">
-        <a href="#" class="bg-{{>color value=colors opacity="normal"}} hover:bg-{{>color value=colors opacity="darker"}} inline-flex items-center justify-center px-4 py-2 text-base font-medium leading-6 text-white whitespace-no-wrap {{>rounded radius=borders.radius}}">
+<!-- STANDARD THEME / HEADER -->
+<section class="relative bg-white">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6">
+    <div class="flex justify-between items-center border-b-2 border-gray-100 py-6 md:justify-start md:space-x-10">
+      <div class="flex justify-start">
+        <a href="#_" class="flex items-center mb-5 font-medium text-gray-900 lg:w-auto lg:items-center lg:justify-center md:mb-0">
+          <span class="mx-auto text-4xl transform rotate-90 font-black text-{{>color value=colors opacity="normal"}} leading-none select-none">
+            <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><title></title><path d="M12.001,4.8c-3.2,0-5.2,1.6-6,4.8c1.2-1.6,2.6-2.2,4.2-1.8c0.913,0.228,1.565,0.89,2.288,1.624 C13.666,10.618,15.027,12,18.001,12c3.2,0,5.2-1.6,6-4.8c-1.2,1.6-2.6,2.2-4.2,1.8c-0.913-0.228-1.565-0.89-2.288-1.624 C16.337,6.182,14.976,4.8,12.001,4.8z M6.001,12c-3.2,0-5.2,1.6-6,4.8c1.2-1.6,2.6-2.2,4.2-1.8c0.913,0.228,1.565,0.89,2.288,1.624 c1.177,1.194,2.538,2.576,5.512,2.576c3.2,0,5.2-1.6,6-4.8c-1.2,1.6-2.6,2.2-4.2,1.8c-0.913-0.228-1.565-0.89-2.288-1.624 C10.337,13.382,8.976,12,6.001,12z"></path></svg>
+          </span>
+        </a>
+      </div>
+      <div class="-mr-2 -my-2 md:hidden">
+        <button type="button" class="bg-white {{>rounded radius=borders.radius}} p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100" aria-expanded="false">
+          <span class="sr-only">Open menu</span>
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+      </div>
+      <nav class="hidden md:flex items-start space-x-10">
+        {{#each mainMenus}}
+          <div class="relative">
+            <a href="{{this.url}}" class="text-{{>color value=colors opacity="normal"}} group bg-white {{>rounded radius=borders.radius}} inline-flex items-center text-base font-medium hover:text-gray-900" aria-expanded="false">
+              <span>{{this.label}}</span>
+            </a>
+          </div>
+        {{/each}}
+      </nav>
+      <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
+        <a href="#" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900 px-4 py-2 bg-gray-100 hover:bg-gray-200 {{>rounded radius=borders.radius}}">
+          Sign in
+        </a>
+        <a href="#" class="ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent {{>rounded radius=borders.radius}} shadow-sm text-base font-medium text-white bg-{{>color value=colors opacity="normal"}} hover:bg-{{>color value=colors opacity="darker"}}">
           Sign up
         </a>
-      </span>
+      </div>
     </div>
   </div>
 </section>
