--- a/src/Templates/StandardTheme/Contents/Standard01/template.hbs
+++ b/src/Templates/StandardTheme/Contents/Standard01/template.hbs
@@ -2,8 +2,8 @@
 <section class="py-12 bg-white">
   <div class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="lg:text-center">
-      <h2 class="text-base text-{{>color value=colors opacity="darker"}} font-semibold tracking-wide uppercase">Transactions</h2>
-      <p class="mt-2 text-3xl sm:text-4xl md:text-5xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+      <h2 class="text-base text-{{>class::color opacity="darker"}} font-semibold tracking-wide uppercase">Transactions</h2>
+      <p class="mt-2 {{>group::Standard::Heading}} text-gray-900">
         A better way to send money
       </p>
       <p class="mt-4 max-w-2xl text-base lg:text-xl text-gray-500 lg:mx-auto">
@@ -15,7 +15,7 @@
       <dl class="space-y-10 md:space-y-0 md:grid md:grid-cols-2 md:gap-x-8 md:gap-y-10">
         <div class="relative">
           <dt>
-            <div class="absolute flex items-center justify-center h-12 w-12 {{>rounded radius=borders.radius}} bg-{{>color value=colors opacity="normal"}} text-white">
+            <div class="absolute flex items-center justify-center h-12 w-12 {{>class::rounded}} bg-{{>class::color opacity="normal"}} text-white">
               <!-- Heroicon name: outline/globe-alt -->
               <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
@@ -30,7 +30,7 @@
 
         <div class="relative">
           <dt>
-            <div class="absolute flex items-center justify-center h-12 w-12 {{>rounded radius=borders.radius}} bg-{{>color value=colors opacity="normal"}} text-white">
+            <div class="absolute flex items-center justify-center h-12 w-12 {{>class::rounded}} bg-{{>class::color opacity="normal"}} text-white">
               <!-- Heroicon name: outline/scale -->
               <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3" />
@@ -45,7 +45,7 @@
 
         <div class="relative">
           <dt>
-            <div class="absolute flex items-center justify-center h-12 w-12 {{>rounded radius=borders.radius}} bg-{{>color value=colors opacity="normal"}} text-white">
+            <div class="absolute flex items-center justify-center h-12 w-12 {{>class::rounded}} bg-{{>class::color opacity="normal"}} text-white">
               <!-- Heroicon name: outline/lightning-bolt -->
               <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
@@ -60,7 +60,7 @@
 
         <div class="relative">
           <dt>
-            <div class="absolute flex items-center justify-center h-12 w-12 {{>rounded radius=borders.radius}} bg-{{>color value=colors opacity="normal"}} text-white">
+            <div class="absolute flex items-center justify-center h-12 w-12 {{>class::rounded}} bg-{{>class::color opacity="normal"}} text-white">
               <!-- Heroicon name: outline/annotation -->
               <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
