--- a/src/Templates/StandardTheme/Banners/Standard02/template.hbs
+++ b/src/Templates/StandardTheme/Banners/Standard02/template.hbs
@@ -15,14 +15,14 @@
           </h1>
           <p class="mt-4 lg:mx-auto text-xl text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It's never been easier to build beautiful websites that convey your message and tell your story.</p>
           <div class="relative flex flex-col sm:flex-row sm:space-x-4 mt-10">
-            <div class="inline-flex {{>class::rounded}}">
-              <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-white bg-{{>class::color opacity="normal"}} hover:bg-{{>class::color opacity="darker"}}">
+            <div class="inline-flex {{>class::rounded}} mb-3 sm:mb-0">
+              <a href="#" class="w-full sm:w-auto inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-white bg-{{>class::color opacity="normal"}} hover:bg-{{>class::color opacity="darker"}}">
                 Get started
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 ml-1" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
               </a>
             </div>
-            <div class="ml-3 inline-flex {{>class::rounded}} shadow">
-              <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-{{>class::color opacity="normal"}} bg-gray-100 hover:bg-{{>class::color}}-50">
+            <div class="w-full sm:w-auto sm:ml-3 inline-flex {{>class::rounded}} shadow">
+              <a href="#" class="w-full inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-{{>class::color opacity="normal"}} bg-gray-100 hover:bg-{{>class::color}}-50">
                 Learn more
               </a>
             </div>
