--- a/src/Themes/StandardTheme/Headers/Standard02/template.hbs
+++ b/src/Themes/StandardTheme/Headers/Standard02/template.hbs
@@ -20,7 +20,7 @@
       <nav class="hidden md:flex items-start space-x-10">
         {{#each mainMenus}}
           <div class="relative">
-            <a href="{{this.url}}" class="text-{{>class::color opacity="normal"}} group bg-white {{>class::rounded}} inline-flex items-center text-base font-medium hover:text-gray-900" aria-expanded="false">
+            <a href="{{this.url}}" class="group bg-white inline-flex items-center text-base font-medium hover:text-gray-900" aria-expanded="false">
               <span>{{this.label}}</span>
             </a>
           </div>
