--- a/src/Themes/StandardTheme/CTAs/Standard01/template.hbs
+++ b/src/Themes/StandardTheme/CTAs/Standard01/template.hbs
@@ -3,16 +3,16 @@
   <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
     <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
       <span class="block">Ready to dive in?</span>
-      <span class="block text-{{>class::color opacity="normal"}}">Start your free trial today.</span>
+      <span class="block text-{{>class::color-normal}}">Start your free trial today.</span>
     </h2>
     <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
       <div class="inline-flex {{>class::rounded}}">
-        <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-white bg-{{>class::color opacity="normal"}} hover:bg-{{>class::color opacity="darker"}}">
+        <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-white bg-{{>class::color-normal}} hover:bg-{{>class::color-darker}}">
           Get started
         </a>
       </div>
       <div class="ml-3 inline-flex {{>class::rounded}} shadow">
-        <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-{{>class::color opacity="normal"}} bg-white hover:bg-{{>class::color}}-50">
+        <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-{{>class::color-normal}} bg-white hover:bg-{{>class::color}}-50">
           Learn more
         </a>
       </div>
