--- a/src/Themes/StandardTheme/Headers/Standard02/template.hbs
+++ b/src/Themes/StandardTheme/Headers/Standard02/template.hbs
@@ -3,10 +3,11 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6">
     <div class="flex justify-between items-center border-b-2 border-gray-100 py-6 md:justify-start md:space-x-10">
       <div class="flex justify-start">
-        <a href="#_" class="flex items-center mb-5 font-medium text-gray-900 lg:w-auto lg:items-center lg:justify-center md:mb-0">
-          <span class="mx-auto text-4xl transform rotate-90 font-black text-{{>class::color opacity="normal"}} leading-none select-none">
+        <a href="#_" class="flex items-center font-medium lg:w-auto lg:items-center lg:justify-center md:mb-0">
+          <span class="mx-auto text-4xl transform rotate-90 font-black text-{{>class::color-normal}} leading-none select-none">
             <svg stroke="currentColor" fill="currentColor" stroke-width="0" role="img" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><title></title><path d="M12.001,4.8c-3.2,0-5.2,1.6-6,4.8c1.2-1.6,2.6-2.2,4.2-1.8c0.913,0.228,1.565,0.89,2.288,1.624 C13.666,10.618,15.027,12,18.001,12c3.2,0,5.2-1.6,6-4.8c-1.2,1.6-2.6,2.2-4.2,1.8c-0.913-0.228-1.565-0.89-2.288-1.624 C16.337,6.182,14.976,4.8,12.001,4.8z M6.001,12c-3.2,0-5.2,1.6-6,4.8c1.2-1.6,2.6-2.2,4.2-1.8c0.913,0.228,1.565,0.89,2.288,1.624 c1.177,1.194,2.538,2.576,5.512,2.576c3.2,0,5.2-1.6,6-4.8c-1.2,1.6-2.6,2.2-4.2,1.8c-0.913-0.228-1.565-0.89-2.288-1.624 C10.337,13.382,8.976,12,6.001,12z"></path></svg>
           </span>
+          <span class="mx-2 text-2xl font-bold text-{{>class::color-normal}}">Theen Wind</span>
         </a>
       </div>
       <div class="-mr-2 -my-2 md:hidden">
@@ -30,7 +31,7 @@
         <a href="#" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900 px-4 py-2 bg-gray-100 hover:bg-gray-200 {{>class::rounded}}">
           Sign in
         </a>
-        <a href="#" class="ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent {{>class::rounded}} shadow-sm text-base font-medium text-white bg-{{>class::color opacity="normal"}} hover:bg-{{>class::color opacity="darker"}}">
+        <a href="#" class="ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent {{>class::rounded}} shadow-sm text-base font-medium text-white bg-{{>class::color-normal}} hover:bg-{{>class::color-darker}}">
           Sign up
         </a>
       </div>
