--- a/src/Themes/StandardTheme/Headers/Standard04/template.hbs
+++ b/src/Themes/StandardTheme/Headers/Standard04/template.hbs
@@ -1,5 +1,5 @@
 <!-- STANDARD THEME / HEADER -->
-<div class="lg:flex lg:items-center lg:justify-between max-w-7xl p-4 sm:p-6">
+<div class="lg:flex lg:items-center lg:justify-between bg-white max-w-7xl p-4 sm:p-6">
   <div class="flex-1 min-w-0">
     <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:text-3xl sm:truncate">
       Back End Developer
@@ -59,7 +59,7 @@
     </span>
 
     <span class="sm:ml-3">
-      <button type="button" class="inline-flex items-center px-4 py-2 border border-transparent {{>class::rounded}} shadow-sm text-sm font-medium text-white bg-{{>class::color opacity="normal"}} hover:bg-{{>class::color opacity="darker"}}">
+      <button type="button" class="inline-flex items-center px-4 py-2 border border-transparent {{>class::rounded}} shadow-sm text-sm font-medium text-white bg-{{>class::color-normal}} hover:bg-{{>class::color-darker}}">
         <!-- Heroicon name: solid/check -->
         <svg class="-ml-1 mr-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
           <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
