--- a/src/Themes/StandardTheme/Banners/Standard02/template.hbs
+++ b/src/Themes/StandardTheme/Banners/Standard02/template.hbs
@@ -9,20 +9,22 @@
       </div>
       <div class="flex-1">
         <div class="w-full sm:max-w-md lg:max-w-lg sm:pr-5 lg:pr-0 md:pb-0">
-          <h1 class="{{>group::Standard::Heading}} text-gray-900">
+          <h1 class="{{>theme::Standard::Heading}} text-gray-900">
             <span class="block">Beautiful Pages</span>
-            <span class="text-{{>class::color opacity="normal"}}">Tell Your Story!</span>
+            <span class="text-{{>class::color-normal}}">Tell Your Story!</span>
           </h1>
           <p class="mt-4 lg:mx-auto text-xl text-gray-500 sm:max-w-md lg:text-xl md:max-w-3xl">It's never been easier to build beautiful websites that convey your message and tell your story.</p>
           <div class="relative flex flex-col sm:flex-row sm:space-x-4 mt-10">
             <div class="inline-flex {{>class::rounded}} mb-3 sm:mb-0">
-              <a href="#" class="w-full sm:w-auto inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-white bg-{{>class::color opacity="normal"}} hover:bg-{{>class::color opacity="darker"}}">
+              <a href="#" class="w-full sm:w-auto inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-white bg-{{>class::color-normal}} hover:bg-{{>class::color-darker}}">
                 Get started
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 ml-1" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6" />
+                </svg>
               </a>
             </div>
             <div class="w-full sm:w-auto sm:ml-3 inline-flex {{>class::rounded}} shadow">
-              <a href="#" class="w-full inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-{{>class::color opacity="normal"}} bg-gray-100 hover:bg-{{>class::color}}-50">
+              <a href="#" class="w-full inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium {{>class::rounded}} text-{{>class::color-normal}} bg-gray-100 hover:bg-{{>class::color}}-50">
                 Learn more
               </a>
             </div>
